# tree-sitter-pic

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yaml
bindings/c/: tree-sitter-pic.pc.in
bindings/c/tree_sitter/: tree-sitter-pic.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_pic/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPicTests/: TreeSitterPicTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: assignment.txt  attributes.txt  basic.txt  blocks.text  elements.txt  kernighan.txt  macros.txt  statements.txt  stevens.txt
