[package]
name = "tree-sitter-pic"
description = "Pic grammar for tree-sitter"
version = "0.0.1"
license = "BSD-2-Clause"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "pic"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/smoeding/tree-sitter-pic"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
