[package]
name = "tree-sitter-pic"
description = "Pic grammar for tree-sitter"
version = "0.0.1"
authors = ["Stefan Möding <stm@kill-9.net>"]
license = "BSD-2-Clause"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "pic"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/smoeding/tree-sitter-pic"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
